fixed spacing

--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -17,7 +17,7 @@
   .container {
     max-width: 1440px;
     width: 100%;
-    padding: 20px 40px;
+    padding: 10px 40px;
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
@@ -25,7 +25,7 @@
 
     @media (max-width: 1520px) {
       max-width: 100%;
-      padding: 20px;
+      padding: 10px 20px;
     }
   }
 }
